<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/order"
            android:textSize="25sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus"
                android:text="@string/plus"
                android:layout_margin="16dp"
                android:onClick="AddOne"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quanity"
                android:text="@string/init"
                android:layout_margin="16dp"
                android:textSize="20sp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus"
                android:text="@string/minus"
                android:layout_margin="16dp"
                android:onClick="lessOne"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/choco"
            android:textSize="16sp"
            android:id="@+id/chocolate"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/crream"
            android:textSize="16sp"
            android:id="@+id/cream"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:padding="10sp"
            android:fontFamily="monospace"
            android:text="@string/Cost"
            android:id="@+id/Singlep"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/getUserName"

            android:layout_margin="16dp"
            android:autofillHints="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/userMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/getMailId"
            android:inputType="textEmailAddress"
            android:layout_margin="16dp"
            android:autofillHints="@string/getMailId" />

        <EditText
            android:id="@+id/userNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:hint="@string/getNUM"
            android:inputType="number"
            android:autofillHints="@string/getNUM" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9sp"
            android:padding="20sp"
            android:visibility="invisible"
            android:id="@+id/summary"
            android:fontFamily="casual"/>
        </ScrollView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="10sp"
                android:id="@+id/odernow"
                android:onClick="Ordered"
                android:visibility="visible"
                android:text="@string/submit"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10sp"
                android:onClick="Jumpoff"
                android:id="@+id/odern"
                android:text="@string/submit1"
                android:visibility="invisible"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
